<resources>
    <string name="app_name">StartAdndroidTests</string>
    <string name="str_test_mosk_1">Test  1</string>
    <string name="str_test_mosk_2">Test  2</string>
    <string name="str_test_mosk_3">Test  3</string>
    <string name="empty_text">empty text</string>

</resources>
